# pepper_nullemo

./: CMakeLists.txt  README.md  package.xml
filtrjac/: filtrjac.cpp  filtrjac.hpp
include/: filtr_reflexxes.hpp  pepper_chain_init.hpp  pepper_core.hpp  pepper_emotional.hpp  pepper_ik_algs.hpp  pepper_ik_algs_full.hpp  pepper_nullemo_aux.hpp  pepper_nullemo_tasks.hpp  pepper_trajectories_data.hpp
launch/: pepper_arm_config_listener.launch  pepper_config_tester.launch  pepper_nullemo.launch  pepper_nullemo_full.launch  pepper_nullemo_ik_test.launch  pepper_nullemo_pose_generator.launch  pepper_nullemo_trajectory_ik_test.launch  pepper_random_config_generator.launch  pepper_random_config_pose_generator.launch  pepper_random_pose_generator.launch  pepper_random_pose_generator_rviz.launch
msg/: geometry_msgs_pose_vector.msg
rviz/: pepper_config_poses_visualization.rviz  pepper_poses_visualization.rviz
src/: filtr_reflexxes.cpp  pepper_arm_config_listener.cpp  pepper_cartesian_trajectories_generator.cpp  pepper_chain_init.cpp  pepper_config_tester.cpp  pepper_core.cpp  pepper_emotional.cpp  pepper_ik_algs.cpp  pepper_ik_algs_full.cpp  pepper_nullemo.cpp  pepper_nullemo_aux.cpp  pepper_nullemo_full.cpp  pepper_nullemo_tasks.cpp  pepper_offset_pose_from_config_generator.cpp  pepper_poses_to_rviz.cpp  pepper_random_config_generator.cpp  pepper_random_pose_generator.cpp
srv/: pepper_rnd_cfg_gen.srv  pepper_rnd_pose_gen.srv  pepper_trajectory_selection.srv
