<?xml version="1.0"?>
<package>
  <name>pepper_nullemo</name>
  <version>0.0.0</version>
  <description>The pepper_nullemo package</description>

  <maintainer email="joseparnau@todo.todo">joseparnau</maintainer>


  <license>TODO</license>

  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  
  <run_depend>message_runtime</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>visualization_msgs</run_depend>
  
  <buildtool_depend>catkin</buildtool_depend>

</package>